--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "homenet-plugin-flic",
   "description": "Flic button plugin for Homenet",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,10 +22,8 @@
   },
   "homepage": "https://github.com/denwilliams/homenet-plugin-flic#readme",
   "dependencies": {},
-  "peerDependencies": {
-    "homenet-core": "^4.0.0-beta.3"
-  },
   "devDependencies": {
-    "homenet-core-tsd": "^4.0.0-beta.1"
+    "@homenet/core-tsd": "^4.0.0-beta.8",
+    "@types/node": "^7.0.4"
   }
 }
