--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "homepage": "https://github.com/denwilliams/homenet-plugin-flic#readme",
   "dependencies": {},
   "devDependencies": {
-    "@homenet/core-tsd": "^4.0.0-beta.8",
+    "@homenet/core-tsd": "^4.0.0-beta.8a",
     "@types/node": "^7.0.4"
   }
 }
